--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
 <body>
+    <header class="container">
+        <div class="row">
+            <h1 class="col-sm-4">Heading</h1>
+            <nav class="col-sm-8 text-right">
+                <p>Overview</p>
+                <p>Location</p>
+                <p>Time Table</p>
+                <p>Tournament</p>
+                <p>Registration</p>
+                <p>Pics</p>
+                <p>Results</p>
+                <p>FAQ</p>
+            </nav> 
+        </div>
+    </header>
+
+
     <h1>Template for ETDS</h1>
     <p id="demo">
         This is a paragraph
