--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <header class="container">
         <div class="row">
-            <h1 class="col-sm-4">Heading</h1>
-            <nav class="col-sm-8 text-right">
+            <nav class="col-sm-12 text-left"> 
                 <p>Overview</p>
                 <p>Location</p>
                 <p>Time Table</p>
