--- a/results.html
+++ b/results.html
@@ -3,14 +3,14 @@
 <head>
     <title>ETDS Template</title>
     <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
 <body>
     <header>
         <section class="jumbotron headerImage">
             <div class=>
-                <h1>ETDS 2020</h1>
+                <h1>ETDS 2020, Amsterdam</h1>
             </div>   
         </section>
         <section class="container"> 
@@ -24,6 +24,7 @@
                     <p><a href="pics.html">Pics</a></p>
                     <p><a href="results.html">Results</a></p>
                     <p><a href="faq.html">FAQ</a></p>
+                    <p><a href="teamcaptains.html">Teamcaptains</a></p>
                 </nav> 
             </div>
         </section>
@@ -44,18 +45,12 @@
 <footer class="container">
     <div class="row icons">
         <ul>
-            <li><img src="facebook.svg" height="50"></li>
-            <li><img src="website.svg" height="50"></li>
-            <li><img src="placeholder.svg" height="50"></li>
-            <li> <img src="mail.svg" height="50"></li>
+            <li><img src="imgs/facebook.svg" height="50"></li>
+            <li><img src="imgs/website.svg" height="50"></li>
+            <li><img src="imgs/placeholder.svg" height="50"></li>
+            <li><img src="imgs/mail.svg" height="50"></li>
         </ul>
 
-<!--         <ul class="col-sm-12">
-            <li class="col-sm-3"><img src="facebook.svg" height="50"></li>
-            <li class="col-sm-3"><img src="website.svg" height="50"></li>
-            <li class="col-sm-3"><img src="placeholder.svg" height="50"></li>
-            <li class="col-sm-3"> <img src="mail.svg" height="50"></li>
-        </ul> -->
     </div>
     <div class="credits">
         <p class="col-sm-6" style="text-align:left;"> &copy; 2019 AmsterDance</p>
