--- a/combine.html
+++ b/combine.html
@@ -12,7 +12,7 @@
 
       <div class="daynight">
         <div class="container2">
-          <div class = "toggle-btn" id="toggle-btn" onclick='myFunction()'>
+          <div class = "toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
             <div class = "inner-circle"></div>
           </div>
         </div>
@@ -24,7 +24,7 @@
           <li class = "logo" id = "logo">
             <div class="daynight">
               <div class="container2">
-                <div class = "toggle-btn" id="toggle-btn" onclick='myFunction()'>
+                <div class = "toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
                   <div class = "inner-circle"></div>
                 </div>
               </div>
