--- a/index.html
+++ b/index.html
@@ -1,90 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>ETDS Template</title>
-    <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+  <title>ETDS Template</title>
+  <meta name="robots" content="noindex">
+  <link rel="stylesheet" href="css/combine.css">
 </head>
-<body>
-    <header>
-        <section class="jumbotron headerImage">
-            <div class=>
-                <h1>ETDS 2020, Amsterdam</h1>
-            </div>   
-        </section>
-        <section class="container"> 
-            <div class="row navigationBar">
-                <nav class="col-sm-12 text-left"> 
-                    <p><a href="index.html">Overview</a></p>
-                    <p><a href="location.html">Location</a></p>
-                    <p><a href="timetable.html">Time Table</a></p>
-                    <p><a href="tournament.html">Tournament</a></p>
-                    <p><a href="registration.html">Registration</a></p>
-                    <p><a href="pics.html">Pics</a></p>
-                    <p><a href="results.html">Results</a></p>
-                    <p><a href="faq.html">FAQ</a></p>
-                    <p><a href="teamcaptains.html">Teamcaptains</a></p>
-                </nav> 
-            </div>
-        </section>
-    </header>
+<body onload="dayOrNight()" class="body">
+  <div class="container" id="container">
+    <div class="header" id="header">
+      <div class="amsterdam"><p id="p"> Amsterdam by <br/> </p> </div>
 
-    <section class="container MainContainer">
-        <h1>What is ETDS?</h1>
-        <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum vulputate blandit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce posuere faucibus nisl nec convallis. Pellentesque id ipsum luctus, consectetur quam vel, auctor erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin eget velit et felis facilisis sollicitudin eu a velit. In iaculis euismod nisl, at consequat lacus feugiat maximus. Proin vitae scelerisque felis. Sed molestie rutrum sem vitae convallis. 
-        </p>
-        
-        <p> 
-            Nulla ut sapien urna. In lacinia porta placerat. In quis quam sed metus consectetur semper eu at felis. Sed ornare mollis gravida. Aenean lectus neque, sodales eu auctor at, vehicula sit amet nunc. Sed sit amet hendrerit mauris. In ultricies magna nec arcu varius varius. Integer consequat, tortor nec feugiat mollis, purus elit iaculis ex, ac pharetra quam dolor in tortor. Phasellus placerat leo arcu, at tempus nisl aliquet vel.
-        </p>
-
-        <p>
-            For more information about the tournament, go to the tournament section by cliking  <a href="tournament.html"> here</a>.
-        </p>
-
-        <h1>Theme</h1>
-        <p>
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur quis justo in tortor maximus iaculis interdum sed lectus. Pellentesque hendrerit, ante vitae finibus gravida, elit ante ultricies lorem, a egestas orci massa ac enim. Duis mollis pharetra ipsum, ut condimentum ipsum rhoncus id. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse semper, erat at placerat mattis, turpis sem egestas eros, non finibus lorem erat ut elit. Pellentesque mattis, neque ut pretium suscipit, ipsum elit malesuada lacus, ac consequat eros orci quis quam. Duis cursus porttitor nulla vel semper. Fusce finibus libero ornare ex fermentum, vel volutpat turpis accumsan. Etiam neque sapien, facilisis at augue nec, sollicitudin interdum nibh. Quisque quis posuere magna. Aenean vulputate mattis massa at ultricies. Aliquam in tempor dui.
-        </p>
-
-        <h1>Merchandise</h1>
-        <p>
-            Quisque ac pellentesque neque. Ut blandit, ex at tincidunt ornare, enim risus aliquet massa, et vestibulum enim elit sed justo. Etiam eu leo tempus, suscipit urna sed, efficitur odio. Ut et pulvinar est, eget auctor orci. Mauris mollis consequat velit, quis lobortis sapien. Quisque mattis pretium dui, eu dapibus justo iaculis in. Phasellus at turpis vitae odio sodales facilisis in nec nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur eu elit facilisis nisi dictum maximus. Nam porta id leo eu mattis. Donec quis sapien accumsan risus eleifend aliquet. Morbi iaculis nibh convallis tristique aliquam. Nunc quam leo, fringilla ac volutpat ut, facilisis sit amet ligula. In egestas mi gravida tempus sollicitudin. Mauris at nunc quam.
-        </p>
-
-        <p>
-            Vivamus tincidunt enim purus, eu luctus diam tincidunt a. Nulla in nisl mi. Donec eget dui tincidunt, gravida lorem id, condimentum arcu. Praesent finibus malesuada erat, et suscipit ipsum suscipit aliquam. Cras vel eros mattis, cursus quam non, tempor dui. Cras leo tellus, lobortis eu sapien vel, pretium gravida turpis. In tempus tempus congue. Mauris a facilisis nibh. Nulla sagittis augue at diam tempor fermentum. Morbi eget lectus libero. Etiam egestas sem velit, non congue lorem pretium a. Vestibulum ornare tellus quis mauris fermentum fringilla. Donec tincidunt volutpat lacus. Quisque scelerisque mauris in facilisis lobortis. Nam vitae dui condimentum eros accumsan viverra.
-        </p>
-        
-    </section>
-
-
-<!-- The scripts go here. -->
-    <script src="js/scripts.js"></script>
-</body>
-
-<footer class="container">
-    <div class="row icons">
+      <div class="daynight">
+        <div class="container2">
+          <div class = "toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
+            <div class = "inner-circle"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="navbar" id="navbar">
+      <div class="navcontainer" id="navcontainer">
         <ul>
-            <li><img src="imgs/facebook.svg" height="50"></li>
-            <li><img src="imgs/website.svg" height="50"></li>
-            <li><img src="imgs/placeholder.svg" height="50"></li>
-            <li><img src="imgs/mail.svg" height="50"></li>
+          <li class = "logo" id = "logo">
+            <div class="daynight">
+              <div class="container2">
+                <div class = "toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
+                  <div class = "inner-circle"></div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li> index </li>
+          <li> blieb </li>
+          <li> bloeb </li>
         </ul>
-
-<!--         <ul class="col-sm-12">
-            <li class="col-sm-3"><img src="facebook.svg" height="50"></li>
-            <li class="col-sm-3"><img src="website.svg" height="50"></li>
-            <li class="col-sm-3"><img src="placeholder.svg" height="50"></li>
-            <li class="col-sm-3"> <img src="mail.svg" height="50"></li>
-        </ul> -->
     </div>
-    <div class="credits">
-        <p class="col-sm-6" style="text-align:left;"> &copy; 2019 AmsterDance</p>
     </div>
-</footer>
+    <div class="main" id="main">
+      <p id="riseandset"> Bla </p>
+      <p id="current"> Bla </p>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac risus nulla. Pellentesque tincidunt quam ut massa elementum scelerisque nec sit amet ligula. Sed condimentum ligula non elementum efficitur. Pellentesque congue rhoncus porttitor. Pellentesque dictum, tortor sed ullamcorper accumsan, massa dui vestibulum ipsum, vehicula aliquet mauris nibh et tortor. Integer sollicitudin sem maximus enim facilisis elementum. Donec velit leo, molestie nec diam et, finibus finibus justo. Curabitur tempor, nulla in elementum consectetur, neque neque ornare mauris, nec mollis nisl libero ac neque. Quisque pharetra elit metus, eget iaculis arcu faucibus vel. Cras ac lectus ipsum. Vivamus ornare dapibus mauris sed commodo.
 
+Morbi malesuada libero eget sem suscipit, vel pharetra dui ultricies. In ullamcorper porta orci nec auctor. Integer pretium facilisis aliquam. In faucibus sapien non diam facilisis laoreet. Proin efficitur, diam non dapibus facilisis, lorem justo ultrices enim, vel pellentesque nibh enim ut justo. Nunc vel justo vel massa consequat euismod eu ac quam. Donec eget felis porttitor, viverra odio ut, laoreet turpis. Cras purus ipsum, aliquet a aliquam tristique, tempor ut felis. Phasellus vel interdum risus. Sed nec dui lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+
+Nullam sit amet mauris in massa placerat accumsan. Sed pretium venenatis velit sit amet tincidunt. Ut vitae risus ac enim luctus gravida. Etiam porttitor tincidunt dictum. Maecenas in tempus nulla. Curabitur mattis condimentum turpis, in porttitor lectus iaculis sit amet. Integer malesuada ornare tristique. Nam auctor magna nisi, quis tincidunt ipsum eleifend id. Praesent consectetur eleifend convallis. Integer pulvinar dictum velit ac efficitur. Nam eu porttitor massa. Nam sit amet pellentesque dui, vulputate accumsan mi. Suspendisse malesuada ex at dui pharetra, sit amet facilisis justo ornare. Nulla tempor commodo urna et luctus. Donec hendrerit purus sit amet consequat vestibulum. Ut in justo consectetur, eleifend ante et, sodales metus.
+
+Integer ut ultrices ex. Pellentesque lobortis lacinia nisi rutrum cursus. Curabitur ac rutrum nisl, non consequat libero. Duis semper erat vel finibus condimentum. Mauris ut magna ut sem tempor semper non a felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin tristique posuere ex quis rhoncus. Cras euismod, arcu condimentum euismod luctus, enim velit pellentesque purus, vitae tincidunt nunc lorem quis neque. Integer gravida gravida quam, et faucibus mi ultricies id. Maecenas volutpat, nulla eget pellentesque consectetur, mauris purus placerat lorem, eget volutpat lacus est at nisi. Cras et arcu at odio laoreet viverra condimentum vitae elit.
+
+Nam id risus congue, lobortis erat in, egestas eros. Mauris euismod quam ipsum, nec porta velit fringilla non. Donec elementum erat tempor ornare elementum. Proin et enim vitae ipsum venenatis dapibus sit amet nec nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin nisi enim, venenatis vel elit in, pellentesque pellentesque libero. Aenean non ligula quis ligula malesuada sagittis eget ac massa. Duis dolor dui, vestibulum quis lacus sed, posuere dignissim odio. Vestibulum ut nunc leo. Curabitur viverra pharetra neque, et mattis justo sollicitudin et. In sagittis cursus sapien, sed semper sem viverra id. Mauris semper mi at finibus efficitur. Donec ullamcorper placerat ex vitae semper. Suspendisse potenti. Ut laoreet, elit sed tristique mollis, sem libero placerat massa, sed congue diam diam quis velit. Vivamus vel nibh tellus.
+
+Morbi quis dignissim sapien, a pellentesque justo. Quisque mi nunc, lobortis eu congue id, tempor sit amet nisl. Mauris at viverra arcu. Suspendisse consectetur ac ligula vel ultricies. Maecenas cursus, urna non laoreet feugiat, neque purus congue lacus, vitae molestie tellus arcu eget ex. Etiam luctus tortor et risus posuere, ac venenatis ante bibendum. Vestibulum cursus, lorem a convallis commodo, massa sapien placerat orci, sed efficitur elit orci sit amet turpis. Integer semper lacinia commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla facilisi. Vivamus rutrum tincidunt urna. Vestibulum feugiat mi sed condimentum fringilla. Duis eleifend viverra lectus, et placerat ex aliquam vitae. Nam et scelerisque elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+Donec pharetra tortor a mi mollis, nec ultricies augue vestibulum. Cras dolor nibh, ullamcorper eu luctus ornare, tempus vitae tortor. Integer ullamcorper lorem sit amet malesuada malesuada. Duis at pretium odio. Aenean scelerisque lorem in mi ultrices, quis volutpat enim tempus. Proin consequat urna non turpis fringilla, sed vehicula elit fermentum. Proin aliquam vulputate magna, sed eleifend magna sollicitudin tincidunt. Curabitur congue non dolor a pellentesque.
+
+Aliquam ornare erat in leo egestas viverra. Proin consequat dapibus leo. Proin et est urna. Cras eros tortor, placerat vitae tellus eget, tincidunt sollicitudin est. Praesent venenatis dapibus mi, at imperdiet magna egestas sed. Suspendisse pulvinar elit tortor, nec convallis nibh viverra id. Morbi nunc urna, lobortis sit amet lorem et, dapibus sollicitudin magna. Aliquam ut convallis tortor, vitae facilisis urna. Nulla facilisi. Duis sed justo quis est vulputate convallis.
+
+Etiam eleifend elit nec sem vulputate fermentum. Nunc commodo eleifend nibh, consequat gravida tellus euismod vel. Aliquam vehicula dolor vel arcu molestie, ac semper justo faucibus. Duis ullamcorper metus neque, in malesuada libero viverra vel. Maecenas rhoncus lacinia nunc, quis molestie sapien sodales sed. Praesent semper tincidunt est eu tempor. Donec in lectus lectus. Fusce ac erat molestie risus sagittis varius. Sed pulvinar tortor at felis finibus, eget suscipit quam rhoncus. Ut vel blandit dui. Fusce sed suscipit leo. In feugiat cursus vestibulum.
+
+Quisque dolor ipsum, rutrum in sagittis a, ullamcorper vel magna. Curabitur sit amet risus quis neque aliquam cursus at id nibh. Etiam augue lacus, blandit a nulla sodales, scelerisque lobortis arcu. Morbi id metus rutrum, faucibus orci et, feugiat massa. Vestibulum purus tortor, fermentum accumsan dolor in, euismod rhoncus sapien. Integer sapien urna, ullamcorper at eros luctus, ultricies semper diam. Suspendisse potenti. Sed et venenatis velit. Sed hendrerit, leo vel sagittis elementum, justo ex aliquam nisi, non condimentum mauris tellus nec sapien. Quisque imperdiet ultrices metus, facilisis facilisis neque posuere id. Donec consequat et nibh eget ultricies. </p>
+    </div>
+    <div class="footer" id="footer"> </div>
+  </div>
+  <script src="js/combine.js"></script>
+</body>
 </html>
-
