--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body onload="dayOrNight()" class="body">
   <div class="container" id="container">
     <div class="header" id="header">
-      <div class="amsterdam"><p id="p"> Amsterdam by <br/> </p> </div>
+      <div class="amsterdam"><p id="amsterdam"> Amsterdam by <br/> </p> </div>
 
       <div class="daynight">
         <div class="container2">
@@ -24,8 +24,8 @@
           <li class = "logo" id = "logo">
             <div class="daynight">
               <div class="container2">
-                <div class = "toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
-                  <div class = "inner-circle"></div>
+                <div class = "toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
+                  <div class = "inner-circle" id="innercircle2"></div>
                 </div>
               </div>
             </div>
@@ -37,8 +37,6 @@
     </div>
     </div>
     <div class="main" id="main">
-      <p id="riseandset"> Bla </p>
-      <p id="current"> Bla </p>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac risus nulla. Pellentesque tincidunt quam ut massa elementum scelerisque nec sit amet ligula. Sed condimentum ligula non elementum efficitur. Pellentesque congue rhoncus porttitor. Pellentesque dictum, tortor sed ullamcorper accumsan, massa dui vestibulum ipsum, vehicula aliquet mauris nibh et tortor. Integer sollicitudin sem maximus enim facilisis elementum. Donec velit leo, molestie nec diam et, finibus finibus justo. Curabitur tempor, nulla in elementum consectetur, neque neque ornare mauris, nec mollis nisl libero ac neque. Quisque pharetra elit metus, eget iaculis arcu faucibus vel. Cras ac lectus ipsum. Vivamus ornare dapibus mauris sed commodo.
 
 Morbi malesuada libero eget sem suscipit, vel pharetra dui ultricies. In ullamcorper porta orci nec auctor. Integer pretium facilisis aliquam. In faucibus sapien non diam facilisis laoreet. Proin efficitur, diam non dapibus facilisis, lorem justo ultrices enim, vel pellentesque nibh enim ut justo. Nunc vel justo vel massa consequat euismod eu ac quam. Donec eget felis porttitor, viverra odio ut, laoreet turpis. Cras purus ipsum, aliquet a aliquam tristique, tempor ut felis. Phasellus vel interdum risus. Sed nec dui lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus.
