--- a/index.html
+++ b/index.html
@@ -19,22 +19,20 @@
       </div>
     </div>
     <div class="navbar" id="navbar">
-      <div class="navcontainer" id="navcontainer">
         <ul>
           <li class = "logo" id = "logo">
-            <div class="daynight">
-              <div class="container2">
+              <div class="container2" id="btn-nav">
                 <div class = "toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
                   <div class = "inner-circle" id="innercircle2"></div>
-                </div>
               </div>
             </div>
           </li>
-          <li> index </li>
-          <li> blieb </li>
-          <li> bloeb </li>
+          <li class = "house"><div id="house"> <div id="home"> Home</div> </div></li>
+          <li> Information </li>
+          <li> Registration </li>
+          <li> Volunteer </li>
+          <li> Merchandise </li>
         </ul>
-    </div>
     </div>
     <div class="main" id="main">
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac risus nulla. Pellentesque tincidunt quam ut massa elementum scelerisque nec sit amet ligula. Sed condimentum ligula non elementum efficitur. Pellentesque congue rhoncus porttitor. Pellentesque dictum, tortor sed ullamcorper accumsan, massa dui vestibulum ipsum, vehicula aliquet mauris nibh et tortor. Integer sollicitudin sem maximus enim facilisis elementum. Donec velit leo, molestie nec diam et, finibus finibus justo. Curabitur tempor, nulla in elementum consectetur, neque neque ornare mauris, nec mollis nisl libero ac neque. Quisque pharetra elit metus, eget iaculis arcu faucibus vel. Cras ac lectus ipsum. Vivamus ornare dapibus mauris sed commodo.
