--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="navbar" id="navbar">
-        <ul>
+        <ul clas="navlist" id="navlist">
           <li class = "logo" id = "logo">
               <div class="container2" id="btn-nav">
                 <div class = "toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
@@ -28,7 +28,14 @@
             </div>
           </li>
           <li class = "house"><div id="house"> <div id="home"> Home</div> </div></li>
-          <li> Information </li>
+          <li class = "info"> Information
+            <ul class = "information">
+              <li>Tournament</li>
+              <li>Location</li>
+              <li>Time-table</li>
+              <li>FAQ</li>
+            </ul>
+          </li>
           <li> Registration </li>
           <li> Volunteer </li>
           <li> Merchandise </li>
