failed change index plan

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
           </li>
           <li class = "house"><div id="house"> <div id="home"> Home</div> </div></li>
-          <li class = "info"> Information
+          <li class = "info"> <div onclick="load_page('information')">Information </div>
             <ul class = "information">
               <li>Tournament</li>
               <li>Location</li>
