--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
         </ul>
     </div>
     <div class="main" id="main">
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac risus nulla. Pellentesque tincidunt quam ut massa elementum scelerisque nec sit amet ligula. Sed condimentum ligula non elementum efficitur. Pellentesque congue rhoncus porttitor. Pellentesque dictum, tortor sed ullamcorper accumsan, massa dui vestibulum ipsum, vehicula aliquet mauris nibh et tortor. Integer sollicitudin sem maximus enim facilisis elementum. Donec velit leo, molestie nec diam et, finibus finibus justo. Curabitur tempor, nulla in elementum consectetur, neque neque ornare mauris, nec mollis nisl libero ac neque. Quisque pharetra elit metus, eget iaculis arcu faucibus vel. Cras ac lectus ipsum. Vivamus ornare dapibus mauris sed commodo.
+      <p> The ETDS also known as the <b>E</b>uropean <b>T</b>ournament for <b>D</b>ancing <b>S</b>tudents is a large ballroom dancing tournament attracting hunderds
+of dancers from Europe. The tournament is hosted twice a year since 1989. This time the ETDS will compete for 'Der Maus' in Amsterdam. <br/><br/>
+
+All dancers can compete in the tournament, which is spread over two days. For each dancer there are two competitions to join, standard and latin.
+The standard dances consisting out of English Waltz, Tango, Quickstep, and for higher levels Slow Foxtrot and and Viennise Waltz. The Latin dances
+consist out of Chachacha, Rumba, Jive, and for higher levels, Samba and Paso doble. <br/><br/>
+
+This tournament is not only about competing. The are an multitude of fun activities planned, and two great parties. <br/><br/>
+
+We are happy to host the ETDS 2020 for you! The ETDS will start from <b>May 29th</b> to  <b>June 1st, 2020</b>. Hopefully we will see you all there! <br/><br/> </p>
+
+
+      <p> <b>Dit is tijdelijk tekst voor pagina vulling voor controle stiky header</b> <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac risus nulla. Pellentesque tincidunt quam ut massa elementum scelerisque nec sit amet ligula. Sed condimentum ligula non elementum efficitur. Pellentesque congue rhoncus porttitor. Pellentesque dictum, tortor sed ullamcorper accumsan, massa dui vestibulum ipsum, vehicula aliquet mauris nibh et tortor. Integer sollicitudin sem maximus enim facilisis elementum. Donec velit leo, molestie nec diam et, finibus finibus justo. Curabitur tempor, nulla in elementum consectetur, neque neque ornare mauris, nec mollis nisl libero ac neque. Quisque pharetra elit metus, eget iaculis arcu faucibus vel. Cras ac lectus ipsum. Vivamus ornare dapibus mauris sed commodo.
 
 Morbi malesuada libero eget sem suscipit, vel pharetra dui ultricies. In ullamcorper porta orci nec auctor. Integer pretium facilisis aliquam. In faucibus sapien non diam facilisis laoreet. Proin efficitur, diam non dapibus facilisis, lorem justo ultrices enim, vel pellentesque nibh enim ut justo. Nunc vel justo vel massa consequat euismod eu ac quam. Donec eget felis porttitor, viverra odio ut, laoreet turpis. Cras purus ipsum, aliquet a aliquam tristique, tempor ut felis. Phasellus vel interdum risus. Sed nec dui lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus.
 
