inladen pagina project

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </div>
           </li>
           <li class = "house"><div id="house"> <div id="home"> Home</div> </div></li>
-          <li class = "info"> <div onclick="load_page('information')">Information </div>
+          <li class = "info"> <div>Information </div>
             <ul class = "information">
-              <li>Tournament</li>
+              <li onclick='load_page("tournament")'>Tournament</li>
               <li>Location</li>
               <li>Time-table</li>
               <li>FAQ</li>
