--- a/tournament.html
+++ b/tournament.html
@@ -1,4 +1,4 @@
-        <h1>Noot</h1>
+        <h1>Tournament</h1>
         <p>
-           Noot.
+           Hier komt some text over het tournament.
         </p>
