trying to style imported pages

--- a/tournament.html
+++ b/tournament.html
@@ -1,4 +1,12 @@
+<head>
+  <link rel="stylesheet" href="css/combine.css">
+</head>
+<body onload="dayOrNight()" class="body">
+  <div class="loadedPage" id="loadedPage">
         <h1>Tournament</h1>
         <p>
            Hier komt some text over het tournament.
         </p>
+    </div>
+    <script src="js/newpage.js"></script>
+</body>
