adding etds amsterdam 2020 text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
       </div>
     </div>
+    <p class="title"> ETDS AMSTERDAM 2020 </p>
     <div class="navbar" id="navbar">
         <ul clas="navlist" id="navlist">
           <li class = "logo" id = "logo">
