changing makup pics

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <b>blacklight glitters also exists </b> ♥ !!
       We will expect your best and extravagant self in blacklight! Sou you at
       the compentition (party).</p>
-      <div class="photo1"></div>
-      <div class="photocontainer"></div>
-      <div class="photocontainer"></div>
+      <div class="photo1 photocontainer"></div>
+      <div class="photo2 photocontainer"></div>
+      <div class="photo3 photocontainer"></div>
         <h1> What is the ETDS? </h1>
         <p> The ETDS also known as the <b>E</b>uropean <b>T</b>ournament for
         <b>D</b>ancing <b>S</b>tudents is a large ballroom dancing tournament
