--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
               </div>
             </div>
           </li>
-          <li class = "house"><div id="house"> <div id="home"> Home</div> </div></li>
-          <li class = "info"> <div>Information </div>
+          <li class = "house current"> <div id="home">Home </div> </li>
+          <li class = "info"> <div id=information>Information <div>
             <ul class = "information">
               <li onclick='load_page("tournament")'>Tournament</li>
               <li>Location</li>
@@ -37,9 +37,9 @@
               <li>FAQ</li>
             </ul>
           </li>
-          <li> Registration </li>
-          <li> Volunteer </li>
-          <li> Merchandise </li>
+          <li> <div id="registration">Registration </div></li>
+          <li> <div id="volunteer">Volunteer </div></li>
+          <li> <div id="merchandise">Merchandise </div></li>
         </ul>
     </div>
     <div class="main" id="main">
