--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             </div>
           </li>
           <li class = "house current"> <div id="home">Home </div> </li>
-          <li class = "info"> <div id=information>Information <div>
+          <li class = "info" onmouseenter="myEnterFunction()"> <div id=information>Information <div>
             <ul class = "information">
-              <li onclick='load_page("tournament")'>Tournament</li>
-              <li>Location</li>
-              <li>Time-table</li>
-              <li>FAQ</li>
+              <li class="dropdown">Tournament</li>
+              <li class="dropdown">Location</li>
+              <li class="dropdown">Time-table</li>
+              <li class="dropdown">FAQ</li>
             </ul>
           </li>
           <li> <div id="registration">Registration </div></li>
