gekloot aan navbar

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             </div>
           </li>
           <li class = "house current"> <div id="home">Home </div> </li>
-          <li class = "info" onmouseenter="myEnterFunction()"> <div id=information>Information <div>
-            <ul class = "information">
-              <li class="dropdown">Tournament</li>
-              <li class="dropdown">Location</li>
-              <li class="dropdown">Time-table</li>
-              <li class="dropdown">FAQ</li>
-            </ul>
+          <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
+            <div class="dropdown-content">
+              <a>Tournament</a>
+              <a>Location</a>
+              <a>Time-table</a>
+              <a>FAQ</a>
+          </div>
           </li>
           <li> <div id="registration">Registration </div></li>
           <li> <div id="volunteer">Volunteer </div></li>
