--- a/location.html
+++ b/location.html
@@ -28,8 +28,8 @@
               </div>
             </div>
           </li>
-          <li class = "house current"> <div id="home">Home </div> </li>
-          <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
+          <li class = "house"> <div id="home"><a href="index.html">Home </a></div> </li>
+          <li class = "dropdown current" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
             <div class="dropdown-content">
               <a>Tournament</a>
               <a>Location</a>
