--- a/registration.html
+++ b/registration.html
@@ -3,59 +3,62 @@
 <head>
     <title>ETDS Template</title>
     <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/combine.css">
 </head>
-<body>
-    <header>
-        <section class="jumbotron headerImage">
-            <div class=>
-                <h1>ETDS 2020, Amsterdam</h1>
-            </div>   
-        </section>
-        <section class="container"> 
-            <div class="row navigationBar">
-                <nav class="col-sm-12 text-left"> 
-                    <p><a href="index.html">Overview</a></p>
-                    <p><a href="location.html">Location</a></p>
-                    <p><a href="timetable.html">Time Table</a></p>
-                    <p><a href="tournament.html">Tournament</a></p>
-                    <p><a href="registration.html">Registration</a></p>
-                    <p><a href="pics.html">Pics</a></p>
-                    <p><a href="results.html">Results</a></p>
-                    <p><a href="faq.html">FAQ</a></p>
-                    <p><a href="teamcaptains.html">Teamcaptains</a></p>
-                </nav> 
+<body onload="dayOrNight()" class="body">
+  <div class="container" id="container">
+    <div class="header" id="header">
+      <div class="amsterdam"><p id="amsterdam"> Amsterdam by <br/> </p> </div>
+
+      <div class="daynight">
+        <div class="container2">
+          <div class = "toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
+            <div class = "inner-circle"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <p class="title"> ETDS AMSTERDAM 2020 </p>
+    <div class="navbar" id="navbar">
+        <ul clas="navlist" id="navlist">
+          <li class = "logo" id = "logo">
+              <div class="container2" id="btn-nav">
+                <div class = "toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
+                  <div class = "inner-circle" id="innercircle2"></div>
+              </div>
             </div>
-        </section>
-    </header>
+          </li>
+          <li class = "house"> <div id="home"><a href="index.html">Home </a></div> </li>
+          <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
+            <div class="dropdown-content">
+              <a>Tournament</a>
+              <a>Location</a>
+              <a>Time-table</a>
+              <a>FAQ</a>
+          </div>
+          </li>
+          <li> <div class="registration current" id="registration">Registration </div></li>
+          <li> <div id="volunteer">Volunteer </div></li>
+          <li> <div id="merchandise">Merchandise </div></li>
+        </ul>
+    </div>
+  <div class="main" id="main">
+    <h1>Registration</h1>
+    <p> Teamcaptains have to register you. Please ask your local dance society
+      for the contact information of your teams teamcaptain. </br></br>
+      The deadline for registation is ... After the registration the system will
+      draft names. For couples who are register together, you will get in together.
+      Whe are using the system that was also used in previous ETDS (name of one ETDS).
+    </p>
+    <h1> ETDS dashboard </h1>
+    <p> https://xtds.nl/dashboard </p>
+    <p> This is where you can log on as team captain to register couples, update
+      information and check your registrations. </p>
 
-    <section class="container MainContainer">
-        <h1>Mies</h1>
-        <p> 
-           Mies. 
-        </p>
-    </section>
-
-
-<!-- The scripts go here. -->
-    <script src="scripts.js"></script>
+  </div>
+  <div class="footer" id="footer"> </div>
+  </div>
+  <script src="js/combine.js"></script>
 </body>
 
-<footer class="container">
-    <div class="row icons">
-        <ul>
-            <li><img src="imgs/facebook.svg" height="50"></li>
-            <li><img src="imgs/website.svg" height="50"></li>
-            <li><img src="imgs/placeholder.svg" height="50"></li>
-            <li><img src="imgs/mail.svg" height="50"></li>
-        </ul>
-
-    </div>
-    <div class="credits">
-        <p class="col-sm-6" style="text-align:left;"> &copy; 2019 AmsterDance</p>
-    </div>
-</footer>
-
 </html>
-
