update text registration

--- a/registration.html
+++ b/registration.html
@@ -37,7 +37,7 @@
               <a>FAQ</a>
           </div>
           </li>
-          <li> <div class="registration current" id="registration">Registration </div></li>
+          <li class="current"> <div id="registration">Registration </div></li>
           <li> <div id="volunteer">Volunteer </div></li>
           <li> <div id="merchandise">Merchandise </div></li>
         </ul>
@@ -45,14 +45,18 @@
   <div class="main" id="main">
     <h1>Registration</h1>
     <p> Teamcaptains have to register you. Please ask your local dance society
-      for the contact information of your teams teamcaptain. </br></br>
-      The deadline for registation is ... After the registration the system will
-      draft names. For couples who are register together, you will get in together.
-      Whe are using the system that was also used in previous ETDS (name of one ETDS).
+      for the contact information of your teams teamcaptain. If you have trouble
+      finding your teamcaptains contact us</br></br>
+      There are 600 spots for the tournament. The deadline for registation will
+      be anounced. After the registration the system will draft names. For
+      couples who are register together, you will get in together.
+      Whe are using the system that was also used in previous ETDS (ETDS
+      Groningen).
+      The cancelation policy will be anounced.
     </p>
     <h1> ETDS dashboard </h1>
-    <p> https://xtds.nl/dashboard </p>
-    <p> This is where you can log on as team captain to register couples, update
+    <p> https://xtds.nl/dashboard </br></br>
+    This is where you can log on as team captain to register couples, update
       information and check your registrations. </p>
 
   </div>
