edit teamcaptains in nav

--- a/location.html
+++ b/location.html
@@ -37,7 +37,7 @@
               <a>FAQ</a>
           </div>
           </li>
-          <li> <div id="registration">Registration </div></li>
+          <li> <div id="registration"> <a href="registration.html"> Teamcaptains </br> & registration </a> </div></li>
           <li> <div id="volunteer">Volunteer </div></li>
           <li> <div id="merchandise">Merchandise </div></li>
         </ul>
