--- a/registration.html
+++ b/registration.html
@@ -32,7 +32,7 @@
           <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
             <div class="dropdown-content">
               <a>Tournament</a>
-              <a>Location</a>
+              <a href="location.html">Location</a>
               <a>Time-table</a>
               <a>FAQ</a>
           </div>
