adding volunteer.html

--- a/location.html
+++ b/location.html
@@ -38,7 +38,7 @@
           </div>
           </li>
           <li> <div id="registration"> <a href="registration.html"> Teamcaptains </br> & registration </a> </div></li>
-          <li> <div id="volunteer">Volunteer </div></li>
+          <li> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li> <div id="merchandise">Merchandise </div></li>
         </ul>
     </div>
