--- a/volunteer.html
+++ b/volunteer.html
@@ -37,28 +37,24 @@
               <a>FAQ</a>
           </div>
           </li>
-          <li class="current"> <div id="registration">Registration </div></li>
-          <li> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
+          <li> <div id="registration"> <a href="registration.html"> Registration </a> </div></li>
+          <li class="current"> <div id="volunteer">Volunteer </div></li>
           <li> <div id="merchandise">Merchandise </div></li>
         </ul>
     </div>
   <div class="main" id="main">
-    <h1>Registration</h1>
-    <p> Teamcaptains have to register you. Please ask your local dance society
-      for the contact information of your teams teamcaptain. If you have trouble
-      finding your teamcaptains contact us</br></br>
-      There are 600 spots for the tournament. The deadline for registation will
-      be anounced. After the registration the system will draft names. For
-      couples who are register together, you will get in together.
-      Whe are using the system that was also used in previous ETDS (ETDS
-      Groningen).
-      The cancelation policy will be anounced.
-    </p>
-    <h1> ETDS dashboard </h1>
-    <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard"> XTDS DASHBOARD </a> </div>
-    <p></br>
-    This is where you can log on as team captain to register couples, update
-      information and check your registrations. </p>
+    <h1>Mandotory Shifts</h1>
+    <p> A large event as the ETDS needs a lot of helping hands. Without people helping
+      out ETDS's could not take place. This is why competitors are mandotory to do
+      a minimal of xx hours of shifts. </p>
+
+    <h1> Volunteer shifts</h1>
+    <p>Besides the mandotory shifts we can use every other shift hours you are willing
+    to offer us! </br>
+    With doing volunteer shifts beside your mandotory shift you can also earn bonuspoints
+    for your team!</p>
+
+    <h1> It is not possible yet to inscribe for shifts </h1>
 
   </div>
   <div class="footer" id="footer"> </div>
