adding tournament.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class = "house current"> <div id="home">Home </div> </li>
           <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
             <div class="dropdown-content">
-              <a>Tournament</a>
+              <a href=tournament.html>Tournament</a>
               <a href="location.html">Location</a>
               <a>Time-table</a>
               <a>FAQ</a>
