--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <li class = "house current"> <div id="home">Home </div> </li>
           <li class = "dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn">Information <a>
             <div class="dropdown-content">
-              <a href=tournament.html>Tournament</a>
+              <a href="tournament.html">Tournament</a>
+              <a href="program.html"> Program </a>
               <a href="location.html">Location</a>
-              <a>Time-table</a>
               <a>FAQ</a>
           </div>
           </li>
