haeder styling updated

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
               <a href="tournament.html">Tournament</a>
               <a href="program.html"> Program </a>
               <a href="location.html">Location</a>
-              <a>FAQ</a>
+              <a href="costs.html">Costs</a>
+              <a href="packinglist">Packing List </a>
+              <a href="regulations.html">Regulations</a>
+              <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
-          <li class="merchandise"> <div id="merchandise">Merchandise </div></li>
+          <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
     </div>
     <div class="main" id="main">
